refactor: update references from orbit_analyzer to orlint across the codebase

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -382,7 +382,7 @@ jobs:
           .button {}
           </style>
           "#;
-                      orbit_analyzer::parser::parse_orbit_file(content, "Button.orbit").unwrap()
+                      orlint::parser::parse_orbit_file(content, "Button.orbit").unwrap()
                   });
               });
           }
