--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,3 @@
-[patch."https://github.com/orbitrs/orbitrs.git"]
-orbitrs = { path = "../orbitrs" }
+# Removed non-existent orbitrs repo reference
+# [patch."https://github.com/orbitrs/orbitrs.git"]
+# orbitrs = { path = "../orbitrs" }
